kubernetes/apps/wikijs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wikijs
  labels:
    toolkit.fluxcd.io/tenant: dev-team
