kubernetes/apps/wikijs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app.kubernetes.io/name: wikijs
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: wikijs
