kubernetes/apps/wikijs/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-tailscale
  namespace: wikijs
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: wikijs
      port:
        number: 3000
  tls:
    - hosts:
        - wiki
